<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mlambolivestock</string>
    <string name="title_activity_home">Home</string>
    <string name="title_stock" tools:ignore="ExtraTranslation">Stock</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_mlambo_enterprises">Welcome to Mlambo Enterprises</string>
    <string name="phone_number">Phone Number</string>
    <string name="code_number">Code Number</string>
    <string name="todo">TODO</string>
    <string name="stock">Stock</string>
    <string name="amount">Amount</string>
    <string name="add_new_stock">Add New stock</string>
</resources>
