<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.PhoneAuth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:text="@string/welcome_to_mlambo_enterprises"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_call"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/PhoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/text"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <ProgressBar
            android:id="@+id/PhoneProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/lock"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_security"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/CodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColorHint="@color/text"
            android:hint="@string/code_number"
            android:inputType="number"
            android:textSize="16sp"
            android:visibility="visible"
            tools:ignore="TextFields"
            tools:visibility="invisible" />

        <ProgressBar
            android:id="@+id/CodeProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>


</LinearLayout>